--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngrx/entity": "^8.4.0",
     "@ngrx/store": "^8.4.0",
     "@ngrx/store-devtools": "^8.4.0",
+    "angular-resizable-element": "^3.2.6",
     "hammerjs": "^2.0.8",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.4.0",
